# list-extras

./: CHANGELOG  LICENSE  README.md  Setup.hs  TODO  VERSION  list-extras.cabal
.github/workflows/: ci.yml
Data/List/: BoehmBerarducci.hs  Church.hs  Extras.hs  Scott.hs
Data/List/Extras/: ArgMax.hs  LazyLength.hs  Pair.hs
Data/List/Extras/Pair/: Test.hs
Prelude/: Listless.hs
src/Data/List/: BoehmBerarducci.hs  Extras.hs  Scott.hs
src/Data/List/Extras/: ArgMax.hs  Argmax.hs  LazyLength.hs  Pair.hs
src/Data/List/Extras/Pair/: Test.hs
src/Prelude/: Listless.hs
