Cabal-Version:  2.2
-- Cabal >=2.2 is required for:
--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
-- Since 2.1, the Cabal-Version must be the absolutely first thing
-- in the file, even before comments.  Also, no longer uses ">=".
--    <https://github.com/haskell/cabal/issues/4899>

----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2025-02-11
----------------------------------------------------------------

Name:           list-extras
Version:        0.4.1.10
Build-Type:     Simple
Stability:      stable
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/list-extras/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      2007–2025 wren romano
-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
License:        BSD-3-Clause
License-File:   LICENSE

Category:       List
Synopsis:       Common not-so-common functions for lists
Description:    Common not-so-common functions for lists.
                .
                Since "Data.List.Extras" is prime realestate for
                extensions to "Data.List", if you have something
                you'd like to contribute feel free to contact the
                maintainer (I'm friendly). I'm amenable to adopting
                code if you think your functions aren't enough for
                a package on their own. Or if you would rather
                maintain a separate package I can share the
                @Data.List.Extras.Foo@ namespace.

Extra-source-files:
    README.md, CHANGELOG

-- This should work as far back as GHC 6.12.1, but we don't verify that by CI.
-- <https://github.com/wrengr/list-extras/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1,
    GHC ==9.2.4,
    GHC ==9.4.8,
    GHC ==9.6.5,
    GHC ==9.8.2,
    GHC ==9.10.1,
    GHC ==9.12.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/list-extras.git

----------------------------------------------------------------
Library
    Default-Language: Haskell2010
    Hs-Source-Dirs:  src
    Exposed-Modules: Prelude.Listless
                   -- , Data.List.BoehmBerarducci
                   -- , Data.List.Scott
                   , Data.List.Extras
                   , Data.List.Extras.Argmax
                   , Data.List.Extras.LazyLength
                   , Data.List.Extras.Pair
    Build-Depends: base >= 4 && < 5
    -- Build-Depends: data-or

----------------------------------------------------------------
----------------------------------------------------------- fin.
